--- a/OpenMarket/OpenMarket/Base.lproj/Main.storyboard
+++ b/OpenMarket/OpenMarket/Base.lproj/Main.storyboard
@@ -16,8 +16,20 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="로딩중..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QEq-14-im1">
+                                <rect key="frame" x="178" y="437.5" width="58" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="QEq-14-im1" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="cZw-Es-Pcc"/>
+                            <constraint firstItem="QEq-14-im1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="pTM-Mu-BLV"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="b7c-0n-WXd">
                         <nil key="title"/>
@@ -36,6 +48,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="loadingLabel" destination="QEq-14-im1" id="u5i-xi-Mgi"/>
                         <outlet property="segmentControl" destination="vI1-XS-7Dw" id="9br-bW-bTK"/>
                     </connections>
                 </viewController>
